workshop-04/weather.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: weather-deploy
  namespace: myns
  labels:
    app: weather-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: weather-pod
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      name: weather-pod
      labels:
        app: weather-pod
        version: v1
    spec:
      containers:
        - name: weatherapp
          image: stackupiss/weather:v1
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
          ports:
            - name: weather-port
              containerPort: 3000
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 3

---
kind: Service
apiVersion: v1
metadata:
  name: weather-svc
  namespace: myns
  labels:
    app: weather-svc
spec:
  type: ClusterIP
  selector:
    app: weather-pod
  ports:
    - name: weather-svc-port
      port: 3000
      targetPort: weather-port
---
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
    name: weather-ing
    namespace: myns
    labels:
        name: weather-app
    annotations:
        nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
    rules:
    - host: weather.com
      http:
        paths:
        - path: /
          backend:
            serviceName: weather-svc
            servicePort: weather-port
